[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Images/background.jpeg" type="Texture" id=1]
[ext_resource path="res://Assets/Images/screen.png" type="Texture" id=2]
[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Factory2.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/GUI pack/Prinbles_GUI_Asset_Silent (1.0.0)/asset/BlankButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/GUI pack/Prinbles_GUI_Asset_Silent (1.0.0)/asset/BlankButtonHover.png" type="Texture" id=6]
[ext_resource path="res://Assets/Other/DefaultCartoonFont.tres" type="Theme" id=7]
[ext_resource path="res://Scenes/workPay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/InfoBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/AchievementPopUp.tscn" type="PackedScene" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 2.0
margin_right = 903.0
margin_bottom = 362.0
rect_scale = Vector2( 1.42, 2 )
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -80.0
margin_top = -84.0
margin_right = 532.0
margin_bottom = 324.0
rect_scale = Vector2( 2.4, 2.2 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 178.0
margin_top = 24.0
margin_right = 1126.0
margin_bottom = 532.0

[node name="Title" type="Label" parent="."]
margin_left = 220.0
margin_top = 34.0
margin_right = 660.0
margin_bottom = 66.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Calculate Factory Budget"

[node name="IncomeLabel" type="Label" parent="."]
margin_left = 491.0
margin_top = 107.0
margin_right = 771.0
margin_bottom = 139.0
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Income"
align = 1

[node name="Income" type="Label" parent="."]
margin_left = 571.0
margin_top = 148.0
margin_right = 743.0
margin_bottom = 213.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Expenses" type="Label" parent="."]
margin_left = 571.0
margin_top = 255.0
margin_right = 745.0
margin_bottom = 321.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="ExpensesLabel" type="Label" parent="."]
margin_left = 490.0
margin_top = 215.0
margin_right = 770.0
margin_bottom = 247.0
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Expenses"
align = 1

[node name="ProfitLabel" type="Label" parent="."]
margin_left = 526.0
margin_top = 319.0
margin_right = 806.0
margin_bottom = 351.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Profit/Loss"
align = 1

[node name="Profit" type="LineEdit" parent="ProfitLabel"]
margin_left = -3.0
margin_top = 36.0
margin_right = 279.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 171, 28 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Submit" type="TextureButton" parent="."]
margin_left = 537.0
margin_top = 449.0
margin_right = 705.0
margin_bottom = 537.0
rect_scale = Vector2( 1.5, 1 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="ButtonText" type="Label" parent="."]
margin_left = 566.0
margin_top = 452.0
margin_right = 770.0
margin_bottom = 519.0
custom_fonts/font = ExtResource( 3 )
text = "Submit 
Calculations"
align = 1

[node name="GameWin" type="AcceptDialog" parent="."]
margin_left = 422.0
margin_top = 217.0
margin_right = 958.0
margin_bottom = 381.0
theme = ExtResource( 7 )
window_title = "PayDay!"
dialog_text = "
      Work completed, well done:)
Payment will be sent immediately"

[node name="Error" type="AcceptDialog" parent="."]
margin_left = 423.0
margin_top = 219.0
margin_right = 959.0
margin_bottom = 383.0
theme = ExtResource( 7 )
window_title = "Oh oh..."
dialog_text = "
           Wrong Calculation :(
              Please Try Again"

[node name="WorkPayControl" parent="." instance=ExtResource( 8 )]

[node name="Node2D" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Label" type="Label" parent="."]
margin_left = 294.0
margin_top = 567.0
margin_right = 1042.0
margin_bottom = 634.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Please use + for profit or use - for loss"

[node name="AchievementPopUp" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="confirmed" from="GameWin" to="." method="_on_GameWin_confirmed"]
